# claude-container-rs

./: Cargo.toml  STATUS.md
.hyperforge/: config.toml
docs/: GITOPS.md
docs/architecture/: 16671938947931975679_inject-merge-abort.md
docs/plan/: GS-1.md  GS-10.md  GS-11.md  GS-12.md  GS-13.md  GS-16.md  GS-17.md  GS-2.md  GS-3.md  GS-4.md  GS-5.md  GS-6.md  GS-7.md  GS-8.md  GS-9.md
plans/MIRROR/: MIRROR-1.md  MIRROR-2.md  MIRROR-3.md  MIRROR-4.md  MIRROR-5.md  MIRROR-6.md
plans/WATCH/: WATCH-1.md  WATCH-2.md  WATCH-3.md  WATCH-4.md  WATCH-5.md
scripts/container/: cc-agent-run  cc-developer-setup  cc-entrypoint
src/: backend.rs  backend_impl.rs  lib.rs  main.rs  render.rs  scripts.rs  shell_safety.rs  watch.rs
src/cmd/: list.rs  mod.rs  pull.rs  push.rs  run.rs  session.rs  start.rs  sync_cmd.rs  validate.rs  watch.rs
src/container/: mod.rs
src/lifecycle/: mod.rs
src/session/: mod.rs
src/sync/: mod.rs
src/types/: action.rs  agent.rs  config.rs  (+12 more)
tests/: adversarial_test.rs  api_surface_test.rs  bottom_up_test.rs  cleanup_test.rs  docker_e2e_test.rs  e2e_launch_test.rs  end_to_end_vm_test.rs  error_types_test.rs  extract_test.rs  flags_test.rs  harness.rs  image_cache_test.rs  inject_test.rs  integration_test.rs  launch_path_test.rs  launch_test.rs  output_test.rs  plan_visualization_test.rs  preview_validation_test.rs  property_test.proptest-regressions  property_test.rs  reconciliation_test.rs  render_test.rs  safety_test.rs  shell_safety_test.rs  sync_e2e_test.rs  terminal_test.rs  triple_test.rs  two_leg_test.rs  types_test.rs  vm_test.rs
(+51 files in other folders)
