[package]
name = "git-sandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-sandbox"
path = "src/main.rs"

[dependencies]
# Docker API
bollard = "0.18"
# CLI
clap = { version = "4", features = ["derive"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Error handling
anyhow = "1"
thiserror = "2"
# Paths + filesystem
dirs = "6"
tempfile = "3"
# Git
git2 = "0.19"
# Regex for --filter
regex = "1"
# Relative paths for display
pathdiff = "0.2"
# Colors
colored = "3"
# SHA hashing (for cache keys)
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3.32"
# Tar archive (for docker build context)
tar = "0.4"
# Terminal raw mode for container attach
crossterm = "0.28"
# Unix libc for uid/gid/isatty
libc = "0.2"
# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
ctrlc = "3"
